# research_project_template

./: .mypy.ini  .pylintrc  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python_pylint.yml  python_tests.yml  python_type_check.yml
commands/unix/: sort_imports.sh
commands/win/: coverage.ps1
src/mypackage/: __init__.py  __main__.py  mymodule.py
tests/mypackage/end_to_end/: __init__.py
tests/mypackage/integration/: __init__.py
tests/mypackage/unit/: __init__.py  test_mymodule.py
