[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "mypackage"
dynamic = ["version", "readme", "dependencies"]
license = {text = "Apache-2.0 license"}
requires-python = ">=3.7"

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]
mypackage = "mypackage.__main__:main"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
